# substring-search

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
benchmark/include/: Tester.hpp
benchmark/src/: main.cpp
benchmarks/: CMakeLists.txt  common.cpp  common.hpp  exact_benchmark.cpp  fuzzy_benchmark.cpp
benchmarks/include/: Tester.tpp
benchmarks/src/: Tester.cpp  main.cpp
subsearch/: CMakeLists.txt
subsearch/include/subsearch/: Match.hpp  exact.hpp  fuzzy.hpp  subsearch.hpp
subsearch/src/: Match.cpp  exact.cpp  fuzzy.cpp
